apps/app-wounds/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-wounds-service
spec:
  selector:
    app: app-wounds
  ports:
    - port: 80
      targetPort: 80
